--- a/css/style.css
+++ b/css/style.css
@@ -6,3 +6,59 @@ body{
 canvas{
     display: block;
 }
+
+.start-modal{
+    width: 100%;
+    height: 100%;
+    background-color:rgba(0,0,0,.7);
+    position: absolute;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* display: none; */
+}
+
+.start-modal-content{
+    display:flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    width: 300px;
+    height: 500px;
+    background-color: white;
+    border-radius: 4px;
+    padding: 20px;
+    position: relative;
+}
+
+#close{
+    position: absolute;
+    top: 0;
+    right: 14px;
+    font-size: 32px;
+    transform: rotate(45deg);
+    cursor: pointer;
+}
+
+#instructions{
+    position: absolute;
+    bottom: 0;
+    width: 150px;
+    height: 2%;
+    border: 1px solid black;
+    border-radius: 5px;
+    display: flex;
+    justify-content: space-around;
+}
+
+#end-modal{
+    width: 100%;
+    height: 100%;
+    background-color:rgba(0,0,0,.7);
+    position: absolute;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
